[gd_scene load_steps=3 format=3 uid="uid://bldvd32nth1xc"]

[ext_resource type="Script" uid="uid://dse56namej74b" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://mntokg6ai40l" path="res://bird/bird.tscn" id="2_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="GameLayer" type="CanvasLayer" parent="."]
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)

[node name="Bird" parent="GameLayer" instance=ExtResource("2_0xm2m")]

[node name="BarrierTimer" type="Timer" parent="GameLayer"]

[node name="Barriers" type="Node2D" parent="GameLayer"]

[connection signal="timeout" from="GameLayer/BarrierTimer" to="." method="_on_barrier_timer_timeout"]
